# tauri-plugin-system-bars-styles

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json
android/: build.gradle.kts  settings.gradle
android/src/main/java/: SystemBarsStylesPlugin.kt
examples/app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/app/src/: main.ts
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/capabilities/: default.json
examples/app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: set_style.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
