[package]
name = "tauri-plugin-system-bars-styles"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-system-bars-styles"
description = "Tauri plugin to control Android system bar icon styles independently"
license = "MIT"

[dependencies]
tauri = "2.9"
serde = "1"
serde_json = "1"
thiserror = "2"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.5", features = ["build"] }
